header fixed for mobile

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -58,7 +58,7 @@ html {
     border-radius: 2px;
     margin: 0;
     border: none;
-    width: 70%;
+    width: 100%;
     background: rgba(0, 0, 0, 0);
     transition: padding-top 0.2s ease, margin-top 0.2s ease;
     overflow-x: hidden; /* Hack to make "rows" attribute apply in Firefox. */
@@ -72,7 +72,7 @@ html {
     white-space: nowrap;
     padding: 0;
     margin: 0;
-    width: 10%;
+    width: 20%;
     border-top: 1px solid $label-red;
     -webkit-transition: width 0.4s ease;
     transition: width 0.4s ease;
@@ -228,6 +228,7 @@ $opacity : 0.4;
 
 .left-container{
     float: left;
+    width: 60%;
 }
 
 .right-container{
@@ -240,4 +241,31 @@ $opacity : 0.4;
     margin: 14px 15px;
     font-size: 23px;
     color: $text-default;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .header-container{
+        height: 170px;
+    }
+    input.question{
+        font-size: 44px;
+    }
+    input.question + label > span{
+        font-size: 30px;
+    }
+    .right-container{
+        margin-top: 22px;
+        margin-bottom: 3px;
+    }
+    .button{
+        width: 45px;
+        height: 45px;
+    }
+    .icons-pad{
+        margin :12px 13px;
+    }
+    input.question + label{
+        width: 40%;
+    }
 }
